gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-ffi_const_dg.rs
#![crate_type = "lib"]

extern "C" {
    #[ffi_const] // { dg-error ".E0658." "" { target *-*-* } }
    pub fn foo();
}

